k8s/my-nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-deployment
  labels:
    component: web
    app: my-app

spec:
  template:
    metadata:
      name: my-nginx-pod
      labels:
        component: web
        app: my-app
    spec:
      containers:
        - name: my-nginx-container
          image: nginx:alpine
          ports:
            - containerPort: 80

  replicas: 3
  selector:
    matchLabels:
      app: my-app
      component: web
