k8s/my-nginx-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-nginx-pod
  labels:
    component: web
    name: my-app

spec:
  containers:
    - name: my-nginx
      image: sgrams/mynginx2:latest
      ports:
        - containerPort: 80
