k8s/my-backend-lb-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: my-backend-lb-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000

  selector:
    component: backend
    app: my-app
