k8s/my-backend-lb-node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: my-backend-lb-node-port

spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 31111
  selector:
    component: backend
    app: my-app
