k8s/my-backend-node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: my-backend-node-port
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 31001
  selector:
    component: backend
    name: my-app
