k8s/my-nginx-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80

  selector:
    component: web
